--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<style type="text/css">
+	.master {width:525px; position:relative; margin:auto;}
+</style>
 </head>
 
 <body>
-	
+	<div class="master">
+		<h1>Come content here</h1>
+	</div>
 </body>
 </html>
